
<!--<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fadingEdge="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/body_bg"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView android:text="@string/app_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="采样频率" />


    <Spinner
        android:id = "@+id/frequency"
        android:layout_width="fill_parent"
        android:textSize="22sp"
        android:layout_height="wrap_content"/>
-->

    <Button
        android:id="@+id/btnStartService"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnStartService"/>

    <Button
        android:id="@+id/btnEndService"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEndService"/>

    <Button
        android:id="@+id/btnStartRecording"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnStartRecording"/>

    <Button
        android:id="@+id/btnEndRecording"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEndRecording"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSetPhone"
        android:id="@+id/btnSetphone"
        android:layout_marginTop="19dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="56dp" />

    <Button
        android:id="@+id/btnSetIpAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSetIpAddress"/>

    <Button
        android:id="@+id/btnMoreSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnMoreSettings"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="测试连通性"
        android:id="@+id/buttonwms"
        android:layout_marginTop="19dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="56dp" />
<!--
    <Button
        android:id="@+id/btnPost"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Get MAC"/>
-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tv"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:textColor="#FF0000"
        android:layout_marginTop="14dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edit"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ProgressBar
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pb"
        android:layout_below="@+id/tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:indeterminate="false" />

</LinearLayout>
<!--
</ScrollView>
-->